--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,12 @@ h1{
     text-align: right;
     display: flex;
 }
+
+button {
+    background-color: rgb(16, 180, 16);
+    color: white;
+    border: none;
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+}
